--- a/package.json
+++ b/package.json
@@ -2,5 +2,10 @@
 	"devDependencies": {
 		"snyk": "^1.1301.2",
 		"sonarqube-scanner": "^4.3.2"
+	},
+	"pnpm": {
+		"overrides": {
+			"node-forge": ">=1.3.2"
+		}
 	}
 }
