--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -132,9 +132,9 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   pr-comment:
-    needs: [quality, tests, assets]
+    needs: [quality, tests]
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+    if: always() && github.event_name == 'pull_request'
     permissions:
       contents: read
       pull-requests: write
@@ -146,6 +146,7 @@ jobs:
       with:
         pattern: test-results-*
         path: test-results
+      continue-on-error: true
     
     - name: Generate Comment Body
       run: python .github/scripts/comment_pr.py
